--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 # Learn more about .gitignore:
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
 
+# Directories
+obj/
+bin/
+.vs/
+
+
 # Node artifact files
 node_modules/
 dist/
