--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,10 @@
 # Learn more about .gitignore:
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
 
-# Directories
+# Directories and User Files
 obj/
 bin/
-.vs/
+*.suo
 
 
 # Node artifact files
