Added REST functionality for performing CRUD operations on the database through the SiteData, SiteDataQuery, SiteController, and AppDb classes; additionally, removed uneeded data from launchSettings.json and slightly updated appsettings.json. Finally, deleted SiteDataController and MetricContext

--- a/WebApplication1/MetricsAPI.csproj
+++ b/WebApplication1/MetricsAPI.csproj
@@ -17,5 +17,10 @@
     <PackageReference Include="MySqlConnector" Version="1.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 
 </Project>
