Modified API for proper function on server, added Test method and console app that interfaces with said Test - fixed some minor SQL issues as well

--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "Default": "server=metrics-database.c3qkgc3zryke.us-east-1.rds.amazonaws.com;user=master;password=connection;database=metric"
+    "Default": "server=metrics-database.c3qkgc3zryke.us-east-1.rds.amazonaws.com;user id=master;password=connection;port=3306;database=metrics"
 
 
   }
